--- a/Lucy_Mwenda_Assignment_Probability_Theory_Project.ipynb
+++ b/Lucy_Mwenda_Assignment_Probability_Theory_Project.ipynb
@@ -15,6 +15,7 @@
         "6we3E3zt5a00",
         "u5PklErZ7FQ3"
       ],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,7 +147,7 @@
       "metadata": {
         "id": "NuSGK-552bQs"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -222,7 +223,7 @@
         },
         "outputId": "c8a9b626-86e8-4154-c5dd-eef92f2607e5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,7 +336,7 @@
       "metadata": {
         "id": "Yu8ry4n_3qYK"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -356,7 +357,7 @@
         "id": "CbylKLq0yQH-",
         "outputId": "e2723483-1d3b-4d8a-aae0-ada59ffcd105"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +667,7 @@
         "id": "UtICB2K2zuR-",
         "outputId": "c20b90e8-44eb-4770-dcf7-9bcfdc866b1b"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1064,9 +1065,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# I have a hard time writing functions that will be applied to DataFrames\n",
-        "# This is a very simple function, yet I struggled quite a bit - probably\n",
-        "# about 2 hours. Get better at this\n",
+        " #function named extract_numbers() that takes as input a row of the lottery dataframe and returns a sa set containing all the six winning numbers. For the first row, for instance, the function should return the set {3, 41, 11, 12, 43, 14}.\n",
         "def extractNumbers(row):\n",
         "    row = row[4:10]\n",
         "    row = set(row.values)\n",
@@ -1075,7 +1074,7 @@
       "metadata": {
         "id": "OADPy50kBE-8"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -1140,7 +1139,7 @@
       "metadata": {
         "id": "Gpf1E_UhBwy5"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -1242,7 +1241,7 @@
       "metadata": {
         "id": "tcZOK6wv5QZa"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1257,7 +1256,7 @@
         "id": "bkYTgVplaTIw",
         "outputId": "be107bf5-af79-40c4-ce72-1f4bea25c143"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1280,7 +1279,7 @@
         "id": "RG7wXk9sjxRm",
         "outputId": "d4313565-5342-4156-d3ff-1c5ffe2a123c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1303,7 +1302,7 @@
         "id": "YOBxOljWj3U2",
         "outputId": "c47ffb03-c52b-41ef-f5f3-5331ed41e39d"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1326,7 +1325,7 @@
         "id": "cPQEdmkjkBQV",
         "outputId": "829c9dce-bcb1-4964-be3e-f59d291c44a2"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1349,7 +1348,7 @@
         "id": "LkB5H6aTjepu",
         "outputId": "0e66a3c7-0b22-4b92-e7c8-0b8526f77c3f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1372,7 +1371,7 @@
         "id": "Y7ddow8KkT-O",
         "outputId": "5ad804ba-08fc-4351-8617-2dd98fc76ef4"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1494,7 +1493,7 @@
       "metadata": {
         "id": "4jkhatCB668N"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1511,7 +1510,7 @@
         "id": "xN_HSjI1q24q",
         "outputId": "457a3446-50e9-4cf7-b7eb-2b15b5131b0c"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
